# mc-create-webserver

./: .gitignore  Cargo.toml
src/: app.rs  bootstrap.rs  constants.rs  data.rs  database.rs  main.rs  messaging.rs  web.rs
templates/: index.html
